wwr/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Rubik:wght@300&display=swap');


#content {
    max-width: 1600px;
    margin: 0 auto;
}

nav a {
    text-align: center;
    color: white; 
    text-decoration: none;
    padding: 35px;
}

#hero-msg h1, #hero-msg h4 {
    text-align: center;
    color: white;
}

.button-box {
    text-align: center;
}

main section {
    text-align: center;
}

main section img {
    box-sizing: border-box;
}

#background {
    height: 725px;
    background-color: #026c7c;
}

body {
    background-color:#fcfbfb;
    font-family: 'Rubik';
    font-size: 22px;
    margin: 0;
    padding: 0;
}

h2 {
    margin: 0;
}

header {
    background-color: rgba(0,0,0,0.5);
}

nav a:hover {
    background-color: #fcbf49;
    color: black;
}

.book {
    background-color: #026c7c;
    color: white;
    text-decoration: none;
    font-size: 18px;
    padding: 15px 30px;
    margin-top: 50px;
    border-radius: 5px;
}

.join {
    background-color: #026c7c;
    color: white;
    text-decoration: none;
    font-size: 18px;
    padding: 15px 30px;
    margin-top: 50px;
    border-radius: 5px;
}

.book:hover, .join:hover {
    background-color: #fcbf49;
    color: black;
}

.msg {
    background-color: white;
    line-height: 1.5em;
    padding: 35px;
    grid-column: 6/10;
    grid-row: 6/7;
    box-shadow: 5px 5px 10px black;
}

footer {
    background-color: #026c7c;
    color: black;
    padding: 25px 50px;
    margin-top: 200px;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.home-title {
    color: black;
    font-family: 'Fredericka the Great', Helvetica, sans-serif;
    font-size: 2em;
    margin-top: 10px;
}

h4 {
    color: black;
}

.msg h2 {
    color: black;
    font-family: 'Fredericka the Great', Helvetica, sans-serif
}

.msg p {
    color: black;
    font-size: .8em;
    padding-bottom: 15px;
}

footer a {
    color: black;
    text-decoration: none;
}

footer a:hover {
    color: white;
}

#hero-img {
    width: 100%;
}

footer p {
    font-size: 1.2em;
}

footer p a:hover {
    text-decoration: underline;
}

footer .social img {
    padding-top: 15px;
}

#logo_link {
    padding-top: 5px;
    justify-self: center;
    align-self: center;
}

.icon {
    padding-top: 10px;
    width: 80px;
}

.logo {
    width: 80px;
}

.rivers-card, .camping-card, .rapids-card {
    margin: 200px 0;
}   

.card-img {
    border: 10px solid #026c7c;
    transition: transform .5s;
    box-shadow: 5px 5px 10px #6f7364;
}

.card-img:hover {
    opacity: .6;
    transform: scale(1.1);
}

header {
    display: grid;
    grid-template-columns: 150px auto;
}

nav {
    display: flex;
    justify-content: space-around;
}

#hero {
    display: grid;
    grid-template-columns: 1fr 3fr 1fr;
    margin-top: -100px; 
}
            
#hero-box {
    grid-column: 1/4;
    grid-row: 1/3;
    z-index: -1;
}

#hero-msg {
    grid-column: 2/3;
    grid-row: 1/2;
    margin-top: 100px;
}

.home-grid {
    display: grid;
    grid-template-columns: repeat(10, 1fr);
}

.card-img, .mountains {
    width: 100%;
}
             
.rivers-card {
    grid-column: 2/4;
    grid-row: 2/3;
}

.camping-card {
    grid-column: 5/7;
    grid-row: 2/3;
}

.rapids-card {
    grid-column: 8/10;
    grid-row: 2/3;
}

#background {
    grid-column: 1/11;
    grid-row: 4/9;
}

.mountains {
    grid-column: 2/7;
    grid-row: 5/8;
    box-shadow: 5px 5px 10px black;
}


@media screen and (max-width: 900px) {
    #hero, .home-grid {
        display: block;
        height: auto;
    }
    nav, footer {
        flex-direction: column;
    }
    nav a {
        display: block;
        padding: 15px;
    }
    #hero {
        margin-top: 0;
    }
    #hero-msg {
        margin-top: 0;
    }
    #hero-msg h4 {
        display: none;
    }
    .home-title {
        font-size: 25px;
        color: #6f7364;
    }
    .rivers-card, .camping-card, .rapids-card { 
        margin: 50px auto;
        width: 60%;
    }
    #background {
        display: none;
    }
    .mountains, .msg {
        width: 80%;
        display: block;
        margin: 0 auto;
    }
    footer {
        margin-top: 25px;
    }
}



/* Rivers CSS */

.rivers-grid {
    display: grid;
    /*grid-template-columns: 1fr 1fr;*/
    /*grid-template-rows: 1fr 1fr 1fr;*/
    justify-items: center;
    
}

.river-header {
    background-color: #026c7c;
}

.salmon-river {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: .25fr 1fr;
    justify-items: center;
    grid-gap: 20px
}
.salmon-river ul {
    grid-column: 2/3;
    grid-row: 2/3;
    padding: 50px;
    text-align: left;
}

.salmon-img {
    border: 10px solid #026c7c;
    transition: transform .5s;
    box-shadow: 5px 5px 10px #6f7364;
    grid-column: 1/2;
    grid-row: 2/3;
    justify-self: center;
    align-self: center;
}

.salmon-river h2 {
    grid-column: 1/3;
    grid-row: 1/2;
    align-self: end;
    color: #026c7c;
}

.gray-river {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: .25fr 1fr;
    justify-items: center;
    grid-gap: 20px;
}
.gray-img {
    border: 10px solid #026c7c;
    transition: transform .5s;
    box-shadow: 5px 5px 10px #6f7364;
    grid-column: 1/2;
    grid-row: 2/3;
    justify-self: center;
    align-self: center;
}

.gray-river ul {
    grid-column: 2/3;
    grid-row: 2/3;
    padding: 50px;
    text-align: left;
}

.gray-river h2 {
    grid-column: 1/3;
    grid-row: 1/2;
    align-self: end;
    color: #026c7c;
}

.grand-canyon {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: .25fr 1fr;
    justify-items: center;
    grid-gap: 20px;
}

.grand-canyon-img {
    border: 10px solid #026c7c;
    transition: transform .5s;
    box-shadow: 5px 5px 10px #6f7364;
    grid-column: 1/2;
    grid-row: 2/3;
    justify-self: center;
    align-self: center;
}

.grand-canyon ul {
    grid-column: 2/3;
    grid-row: 2/3;
    padding: 50px;
    text-align: left;
}

.grand-canyon h2 {
    grid-column: 1/3;
    grid-row: 1/2;
    align-self: end;
    color: #026c7c;
}

